   - my_utils_container_get_buildable_by_name: removed function.
   - my_utils_widget_set_editable(): new function.
   - my_utils_widget_set_style(): new function.
   - my_utils_widget_set_margin(): new function.
   - my_utils_widget_set_margin_left(): new function.
   - my_utils_widget_set_margin_right(): new function.
   - my_utils_widget_set_xalign(): new function.
   - ofa_admin_credentials_get_size_group(): new method.
   - ofo_bat_get_account(): new method.
   - ofo_bat_set_account(): new method.
   - ofo_dossier_get_last_closing_date(): new method.
   - ofo_dossier_set_last_closing_date(): new method.
   - ofo_dossier_get_prev_exe_last_entry(): new method.
   - ofo_dossier_set_prev_exe_last_entry(): new method.
   - ofa_application_get_copyright(): new method.
   - ofa_dossier_treeview_add_row(): removed method.
   - ofa_dossier_store_add_row(): removed method.
   - ofa_dossier_store_reload(): new method.
   - ofa_exercice_combo_set_selected(): new method.
   - ofa_irenderable_free_dataset(): removed interface method.
   - ofa_irenderable_get_dataset(): removed interface method.
   - ofa_ledger_treeview_get_selection(): new method.
   - ofa_reconciliation_set_account(): new method.
   - ofa_render_page_free_dataset(): new virtual method.
   - ofa_render_page_get_dataset(): new virtual method.
   - ofa_render_page_set_args_valid(): renamed as ofa_render_page_set_args_changed().
   - ofa_settings_get_key_file(): renamed as ofa_settings_get_filename().
   - ofa_settings_get_actual_keyfile(): renamed as ofa_settings_get_keyfile().
   - ofa_settlement_set_account(): new method.
   - src/ui/ofa-import-ex.ui: removed file.

-----------------------------------------------------------------------
 Version 0.39
 ============

 Released on 2014-04-18

 New features:

	- Have account and ledger convertors on EBP import scripts (todo #771).
	- Import settleable indicator from EBP accounts (todo #779).
	- EBP imports now accept a field separator argument.