@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
-  <object class="GtkWindow" id="DBMSRootBin">
+  <object class="GtkWindow" id="drb-window">
     <property name="can_focus">False</property>
     <child>
       <object class="GtkGrid" id="top">
@@ -26,7 +26,7 @@
                 <property name="row_spacing">3</property>
                 <property name="column_spacing">4</property>
                 <child>
-                  <object class="GtkLabel" id="dra-label11">
+                  <object class="GtkLabel" id="drb-account-label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">A_ccount :</property>
@@ -39,7 +39,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="dra-label12">
+                  <object class="GtkLabel" id="drb-password-label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Pa_ssword :</property>
@@ -52,7 +52,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="dra-password">
+                  <object class="GtkEntry" id="drb-password-entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="visibility">False</property>
@@ -64,7 +64,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="dra-account">
+                  <object class="GtkEntry" id="drb-account-entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                   </object>
@@ -74,7 +74,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="dra-message">
+                  <object class="GtkLabel" id="drb-message">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
@@ -103,5 +103,11 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkSizeGroup" id="drb-col0-hsize">
+    <widgets>
+      <widget name="drb-account-label"/>
+      <widget name="drb-password-label"/>
+    </widgets>
   </object>
 </interface>
